plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'monostore.backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

// Web
    implementation "org.springframework.boot:spring-boot-starter-web"

    // Security & JWT
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Validation
    implementation "org.springframework.boot:spring-boot-starter-validation"

    // Lombok for getters/setters
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"
    developmentOnly "org.springframework.boot:spring-boot-devtools"

    // Testing
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

//tasks.named('test') {
//	useJUnitPlatform()
//}
